--- a/CrossoutLogViewer.GUI/Controls/DateSlider.xaml
+++ b/CrossoutLogViewer.GUI/Controls/DateSlider.xaml
@@ -1,13 +1,13 @@
 ﻿<UserControl x:Class="CrossoutLogView.GUI.Controls.DateSlider"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:CrossoutLogView.GUI.Controls"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d"
              Width="120"
-             d:DesignHeight="20" d:DesignWidth="120">
+             d:DesignWidth="120">
     <Border Style="{DynamicResource BorderStyle}"
             BorderThickness="0"
             Padding="0"
