--- a/CrossoutLogViewer.GUI/Controls/PlayerGamesChart.xaml
+++ b/CrossoutLogViewer.GUI/Controls/PlayerGamesChart.xaml
@@ -3,13 +3,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-             xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:local="clr-namespace:CrossoutLogView.GUI.Controls"
+             xmlns:helpers="clr-namespace:CrossoutLogView.GUI.Helpers"
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+             xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
              Loaded="UserControl_Loaded"    
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <helpers:LocalisationHelper x:Key="res"
+                                    DefaultManager="ControlResources" />
+    </UserControl.Resources>
     <Grid>
         <lvc:CartesianChart Series="{Binding Series}"
                             Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
@@ -38,7 +43,7 @@
                               MinRange="5"
                               Grid.Row="1" />
         <local:MultiFlagComboBox x:Name="MultiFlagComboBoxDimensions"
-                                 Title="Dimensions"
+                                 Title="{Binding Source={StaticResource res}, Path=.[Chart_Dims]}"
                                  SelectedValueChanged="MultiFlagComboBox_SelectedValueChanged"
                                  Width="120"
                                  HorizontalAlignment="Right"
