--- a/CrossoutLogViewer.GUI/Controls/UsersListControl.xaml
+++ b/CrossoutLogViewer.GUI/Controls/UsersListControl.xaml
@@ -3,16 +3,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:CrossoutLogView.GUI.Controls"
+             xmlns:helpers="clr-namespace:CrossoutLogView.GUI.Helpers"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:IconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-             xmlns:local="clr-namespace:CrossoutLogView.GUI.Controls"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800"
              Name="_UsersListControl">
+    <UserControl.Resources>
+        <helpers:LocalisationHelper x:Key="res"
+                                    DefaultManager="ControlResources" />
+    </UserControl.Resources>
     <Grid>
         <local:UserOverview DataContext="{Binding ElementName=_UsersListControl, Path=SelectedItem}" />
-        <Expander Header="Games"
+        <Expander Header="{Binding Source={StaticResource res}, Path=.[Games]}"
                   IsExpanded="True"
                   Controls:ControlsHelper.CornerRadius="4"
                   Grid.Row="1"
@@ -23,14 +28,14 @@
         <StackPanel Orientation="Horizontal"
                     VerticalAlignment="Center"
                     Grid.Row="2">
-            <TextBlock Text="Names"
+            <TextBlock Text="{Binding Source={StaticResource res}, Path=.[UsersList_Names]}"
                        Foreground="{DynamicResource MahApps.Brushes.ThemeForeground}"
                        Margin="0,0,4,0"
                        VerticalAlignment="Center" />
             <TextBox Text="{Binding FilterUserName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                      Width="300"
                      Controls:TextBoxHelper.AutoWatermark="True"
-                     Controls:TextBoxHelper.Watermark="Name1|Name2|Name3"
+                     Controls:TextBoxHelper.Watermark="{Binding Source={StaticResource res}, Path=.[UserList_Names_Watermark]}"
                      Controls:TextBoxHelper.ClearTextButton="True" />
         </StackPanel>
         <local:UserDataGrid x:Name="UserListViewUsers"
